Added CoreML dependency.
(cherry picked from commit 75fd8088ecba87a09abdfea144bf567d0c58a841)

--- a/plugin.xml
+++ b/plugin.xml
@@ -113,6 +113,7 @@
             <framework src="OpenGLES.framework"/>
             <framework src="SystemConfiguration.framework"/>
             <framework src="MediaPlayer.framework"/>
+            <framework src="CoreML.framework"/>
             <framework src="libiconv.dylib"/>
             <framework src="libz.dylib"/>
             <framework src="libc++.dylib"/>
